# swarch_rest

./: .gitignore  Cargo.toml  README.md  route.rest
migrations/: 20230901025340_create_task.sql
src/: main.rs
