[package]
name = "swarch_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
poem = { version = "1.3.57", features = ["eyre06", "test"] }
poem-openapi = { version = "3.0.3", features = ["openapi-explorer"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "macros", "sqlite"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
